--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swiper": "^11.1.4"
