--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "framer-motion": "^11.11.17",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.5",
     "react": "^18.2.0",
